--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "private": false,
   "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "build": "yarn build",
+    "dev": "yarn dev",
+    "generate": "yarn generate",
+    "preview": "yarn preview",
+    "postinstall": "yarn prepare"
   },
   "devDependencies": {
     "nuxt": "^3.2.2"
