--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "name": "lukasszabo_com",
   "description": "Personal portfolio.",
   "version": "1.0.2",
-  "main": "app.vue",
+  "main": "pages/index.vue",
   "author": "Lukas Szabo",
   "license": "89",
   "repository": "git+https://github.com/lucasz/lukasszabo_com.git",
